Set up webapp project to run offline